# agenttee

./: .gitignore  AGENTS.md  IDEAS.md  README.md  claude.md  main.py  pyproject.toml
agenttee/: cli.py  compress.py  pipe.py  server.py  store.py  templates.py  tokenizer.py
tests/: test_cli.py  test_compress.py  test_server.py  test_store.py  test_templates.py  test_tokenizer.py
